package com.grupo2.t4j.grupo2.model;public class Plataforma {
}
